syntax = "proto3";

package cn_proto;

message Test_grpc {
    int64 id = 1;
    string title = 2;
    string description =3;
}

message CreateRequest {
    string api = 1;

    // Task entity to add
    Test_grpc test_grpc = 2;
}

message CreateResponse {
    string api = 1;

    // ID of created task
    int64 id = 2;
}

//Request data in read db
message ReadRequest {
    string api = 1;

    // Unique integer identifier of the Test_grpc task
    int64 id = 2;
}

message ReadResponse {
    string api = 1;

    // Task entity read by id
    Test_grpc test_grpc = 2;
}

message DeleteRequest {
    string api = 1;

    // Unique integer identifier of the Test_grpc task to delete
    int64 id = 2;
}

message DeleteResponse {
    string api = 1;

    // Contains number of entities have beed deleted
    // Equals 1 in case of succesfull delete
    int64 Deleted = 2;
}

message UpdateRequest {
    string api = 1;

    Test_grpc test_grpc = 2;
}

message UpdateResponse {
    string api = 1;

    int64 Updated = 2;
}

message ReadAllRequest {
    string api = 1;
}

message ReadAllResponse {
    string api = 1;

    // List of all Test_grpc tasks
    repeated Test_grpc test_grpc = 2;
}

service Test_grpcService {
    rpc Create(CreateRequest) returns (CreateResponse) {

    }

    rpc Read(ReadRequest) returns (ReadResponse) {

    }

    rpc Delete(DeleteRequest) returns (DeleteResponse) {

    }

    rpc Update(UpdateRequest) returns (UpdateResponse) {

    }

    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse) {

    }
}